--- a/FrontEnd/src/css/Usuarios.css
+++ b/FrontEnd/src/css/Usuarios.css
@@ -13,7 +13,7 @@
   background-color: var(--background-color-dark);
   padding: 3rem 3rem 5rem 3rem;
   height: fit-content;
-  width: 50%;
+  width: fit-content;
   border-radius: 3rem;
   border: 3px solid var(--third-color);
 }
