--- a/FrontEnd/src/css/Usuarios.css
+++ b/FrontEnd/src/css/Usuarios.css
@@ -52,6 +52,7 @@
   background-color: #fff;
   color: black;
   border: 2px solid;
+  transition: all 0.3s;
 }
 
 .appointments__table td,
@@ -61,6 +62,7 @@ th {
   text-align: center;
   border: 1px solid black;
   font-size: 2rem;
+  transition: all 0.3s;
 }
 
 .appointments__table th {
@@ -68,6 +70,7 @@ th {
   color: #fff;
   font-weight: bolder;
   font-size: 2rem;
+  transition: all 0.3s;
 }
 
 .table_titles {
@@ -75,6 +78,15 @@ th {
   font-size: 2.75rem;
   margin-top: 2.5rem;
   margin-bottom: 1.5rem;
+}
+
+.table__button {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.table__button:hover {
+  background-color: var(--primary-color);
+  transition: all 0.3s;
 }
 
 .button__appointment {
