--- a/FrontEnd/src/css/Home.css
+++ b/FrontEnd/src/css/Home.css
@@ -38,6 +38,15 @@
   font-size: 3rem;
   cursor: pointer;
   border-bottom: 2px solid var(--secondary-color);
+  transition: all 0.5s ease;
+}
+
+.home__sections:hover {
+  font-size: 3.5rem;
+  color: var(--primary-color);
+  border-bottom: 2px solid white;
+
+  transition: all 0.5s ease;
 }
 
 .home__img {
