--- a/FrontEnd/src/css/Update.css
+++ b/FrontEnd/src/css/Update.css
@@ -19,8 +19,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 45%;
-  height: 45%;
+  width: fit-content;
+  height: fit-content;
+  padding: 4rem;
   z-index: 1000;
   border: 1px solid #ccc;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
