--- a/FrontEnd/src/css/Usuarios.css
+++ b/FrontEnd/src/css/Usuarios.css
@@ -23,12 +23,34 @@
   justify-content: center;
   align-items: center;
 }
+
+.usuariosTitle__container--mod {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .usuariosTitle__container > h2 {
   font-size: 5rem;
   margin-bottom: 2rem;
   text-align: center;
   color: white;
   border-bottom: 3px solid var(--third-color);
+}
+
+.usuariosTitle__container--mod > h2{
+  font-size: 4rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  color: white;
+}
+
+.usuariosTitle__container--mod > p {
+  font-size: 2.25rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  align-self: start;
+  color: white;
 }
 
 .product__add {
@@ -43,7 +65,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 15rem;
 }
 
 .appointments__table {
